complete simulate_far + its inst

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,18 @@
 
 export(.constant_d)
 export(.covariance_mfBm)
+export(.random_design)
 export(hurst_arctan)
 export(hurst_linear)
 export(hurst_logistic)
 export(simulate_fBm)
+export(simulate_far)
 export(simulate_mfBm)
+import(data.table)
 importFrom(MASS,mvrnorm)
 importFrom(data.table,data.table)
+importFrom(data.table,rbindlist)
+importFrom(data.table,setnames)
+importFrom(methods,is)
+importFrom(stats,rpois)
+importFrom(stats,runif)
