smoothing function + inst

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,12 +3,20 @@
 export(.constant_d)
 export(.covariance_mfBm)
 export(.random_design)
+export(biweight)
+export(epanechnikov)
+export(estimate_nw)
+export(estimate_nw_bw)
 export(hurst_arctan)
 export(hurst_linear)
 export(hurst_logistic)
 export(simulate_fBm)
 export(simulate_far)
 export(simulate_mfBm)
+export(triangular)
+export(tricube)
+export(triweight)
+export(uniform)
 import(data.table)
 importFrom(MASS,mvrnorm)
 importFrom(data.table,data.table)
