Add estimate_locreg fun

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,11 @@
 
 export(.constant_d)
 export(.covariance_mfBm)
+export(.format_data)
 export(.random_design)
 export(biweight)
 export(epanechnikov)
+export(estimate_locreg)
 export(estimate_nw)
 export(estimate_nw_bw)
 export(hurst_arctan)
@@ -23,5 +25,6 @@ importFrom(data.table,data.table)
 importFrom(data.table,rbindlist)
 importFrom(data.table,setnames)
 importFrom(methods,is)
+importFrom(stats,median)
 importFrom(stats,rpois)
 importFrom(stats,runif)
