--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,13 +2,15 @@
 
 export(.constant_d)
 export(.covariance_mfBm)
-export(.format_data)
 export(.random_design)
 export(biweight)
 export(epanechnikov)
 export(estimate_locreg)
 export(estimate_nw)
 export(estimate_nw_bw)
+export(estimate_sigma)
+export(get_real_data_far_kenel)
+export(get_real_data_mean)
 export(hurst_arctan)
 export(hurst_linear)
 export(hurst_logistic)
@@ -22,6 +24,7 @@ export(uniform)
 import(data.table)
 importFrom(MASS,mvrnorm)
 importFrom(data.table,data.table)
+importFrom(data.table,dcast)
 importFrom(data.table,rbindlist)
 importFrom(data.table,setnames)
 importFrom(methods,is)
