--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,5 +28,6 @@ importFrom(data.table,rbindlist)
 importFrom(data.table,setnames)
 importFrom(methods,is)
 importFrom(stats,median)
+importFrom(stats,quantile)
 importFrom(stats,rpois)
 importFrom(stats,runif)
