--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,9 @@ export(.covariance_mfBm)
 export(.random_design)
 export(biweight)
 export(epanechnikov)
+export(estimate_autocov)
+export(estimate_autocov_risk)
+export(estimate_empirical_XsXt_autocov)
 export(estimate_empirical_autocov)
 export(estimate_locreg)
 export(estimate_mean)
