change h_grid arg to bw_grid + init get_nw_optimal_bw func.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(estimate_mean_rp)
 export(estimate_nw)
 export(estimate_nw_bw)
 export(estimate_sigma)
+export(get_nw_optimal_bw)
 export(get_real_data_far_kenel)
 export(get_real_data_mean)
 export(hurst_arctan)
