file reorganization in inst folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .Rproj.user
 .Rhistory
-inst/data
-inst/locreg_estimates/
+inst/07_mc_simulate_data/data/
+inst/07_mc_simulate_data/locreg_estimates/
+inst/08_mc_simulate_data/data/
