ignore simulation results

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 inst/07_mc_simulate_data/data/
 inst/07_mc_simulate_data/locreg_estimates/
 inst/08_mc_simulate_data/data/
+inst/08_mc_simulate_data/data/locreg_estimates/
+inst/09_mc_simulate_data/data/
