init loc. reg. proxy values comparaison

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ inst/07_mc_simulate_data/locreg_estimates/
 inst/08_mc_simulate_data/data/
 inst/08_mc_simulate_data/locreg_estimates/
 inst/09_mc_simulate_data/data/
+inst/10_mc_simulate_data/data/
