--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ inst/08_mc_simulate_data/locreg_estimates/
 inst/09_mc_simulate_data/data/
 inst/09_mc_simulate_data/locreg_estimates/
 inst/10_mc_simulate_data/data/
+inst/11_mc_simulate_data/data/
+inst/11_mc_simulate_data/locreg_estimates/
