--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(hurst_linear)
 export(hurst_logistic)
 export(simulate_fBm)
 export(simulate_far)
+export(simulate_fma)
 export(simulate_mfBm)
 export(triangular)
 export(tricube)
