--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,19 +2,13 @@
 
 export(.Qpq_fun)
 export(.Spq_fun)
-export(.constant_d)
-export(.covariance_mfBm)
-export(.random_design)
-export(biweight)
-export(epanechnikov)
 export(estimate_autocov)
-export(estimate_autocov_2bw)
 export(estimate_autocov_bw_rp)
 export(estimate_autocov_risk)
-export(estimate_autocov_risk_2bw)
 export(estimate_autocov_rp)
 export(estimate_empirical_XsXt_autocov)
 export(estimate_empirical_autocov)
+export(estimate_empirical_mom)
 export(estimate_locreg)
 export(estimate_mean)
 export(estimate_mean_bw_rp)
@@ -23,6 +17,7 @@ export(estimate_mean_rp)
 export(estimate_nw)
 export(estimate_nw_bw)
 export(estimate_sigma)
+export(format_data)
 export(get_nw_optimal_bw)
 export(get_real_data_far_kenel)
 export(get_real_data_mean)
@@ -33,26 +28,18 @@ export(simulate_fBm)
 export(simulate_far)
 export(simulate_fma)
 export(simulate_mfBm)
-export(triangular)
-export(tricube)
-export(triweight)
-export(uniform)
 import(Rdpack)
 import(data.table)
 importFrom(MASS,mvrnorm)
 importFrom(Rcpp,sourceCpp)
+importFrom(Rdpack,reprompt)
 importFrom(caret,createFolds)
 importFrom(data.table,between)
 importFrom(data.table,data.table)
-importFrom(data.table,merge.data.table)
 importFrom(data.table,rbindlist)
-importFrom(data.table,setcolorder)
 importFrom(data.table,setnames)
 importFrom(fastmatrix,kronecker.prod)
-importFrom(matrixStats,rowSums2)
 importFrom(methods,is)
-importFrom(stats,median)
-importFrom(stats,quantile)
 importFrom(stats,rpois)
 importFrom(stats,runif)
 useDynLib(adaptiveFTS, .registration = TRUE)
