--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,7 @@ Authors@R:
     person("Hassan", "Maissoro", , "maissorohassan@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: 
-  This package contains the adaptive estimation procedure proposed by Maissoro et al. (2024) for weakly dependent functional time series. 
-  It implements the local regularity estimator, the mean function estimator and the autocovariance function estimator.
+  This package contains the adaptive estimation procedures proposed by Maissoro et al. (2024) and Maissoro et al. (2025) for weakly dependent functional time series. It implements estimators for local regularity parameters, the mean function, the autocovariance function, and an adaptive estimator of the Best Linear Unbiased Predictor (BLUP).
 License: AGPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
