check and resolve NOTE and warnings

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 export(.Qpq_fun)
 export(.Spq_fun)
+export(biweight)
+export(epanechnikov)
 export(estimate_autocov)
 export(estimate_autocov_bw_rp)
 export(estimate_autocov_risk)
@@ -28,11 +30,14 @@ export(simulate_fBm)
 export(simulate_far)
 export(simulate_fma)
 export(simulate_mfBm)
+export(triangular)
+export(tricube)
+export(triweight)
+export(uniform)
 import(Rdpack)
 import(data.table)
 importFrom(MASS,mvrnorm)
 importFrom(Rcpp,sourceCpp)
-importFrom(Rdpack,reprompt)
 importFrom(caret,createFolds)
 importFrom(data.table,between)
 importFrom(data.table,data.table)
