--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Description:
   This package contains the adaptive estimation procedures proposed by Maissoro et al. (2024) and Maissoro et al. (2025) for weakly dependent functional time series. It implements estimators for local regularity parameters, the mean function, the autocovariance function, and an adaptive estimator of the Best Linear Unbiased Predictor (BLUP).
 License: AGPL (>= 3)
 Encoding: UTF-8
-Roxygen: list(markdown = TRUE)
+Roxygen: list(markdown = TRUE, roclets = c("namespace", "rd", "collate"))
 RoxygenNote: 7.3.1
 Imports: 
     caret,
@@ -19,6 +19,7 @@ Imports:
     Rcpp,
     Rdpack
 RdMacros: Rdpack
+Rdpack: bibs inst/references.bib
 Suggests: 
     knitr,
     rmarkdown
