import reprompt from Rdpack

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(get_real_data_mean)
 export(hurst_arctan)
 export(hurst_linear)
 export(hurst_logistic)
+export(predict_curve)
 export(simulate_fBm)
 export(simulate_far)
 export(simulate_fma)
@@ -38,6 +39,7 @@ import(Rdpack)
 import(data.table)
 importFrom(MASS,mvrnorm)
 importFrom(Rcpp,sourceCpp)
+importFrom(Rdpack,reprompt)
 importFrom(caret,createFolds)
 importFrom(data.table,between)
 importFrom(data.table,data.table)
