--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(estimate_autocov)
 export(estimate_autocov_bw_rp)
 export(estimate_autocov_risk)
 export(estimate_autocov_rp)
+export(estimate_cov_segment_risk)
 export(estimate_empirical_XsXt_autocov)
 export(estimate_empirical_autocov)
 export(estimate_empirical_mom)
